@@ -95,6 +95,7 @@
             %precious-signals
             register-services
 
+            default-respawn-limit
             default-service-termination-handler
             default-environment-variables
             make-forkexec-constructor
@@ -207,13 +208,14 @@
 use 'actions' instead.")
     (actions rest ...)))
 
-;; Respawning CAR times in CDR seconds will disable the service.
-;;
-;; XXX: The terrible hack in (shepherd) using SIGALRM to work around
-;; unreliable SIGCHLD delivery means that it might take up to 1 second for
-;; SIGCHLD to be delivered.  Thus, arrange for the car to be lower than the
-;; cdr.
-(define respawn-limit '(5 . 7))
+(define default-respawn-limit
+  ;; Respawning CAR times in CDR seconds will disable the service.
+  ;;
+  ;; XXX: The terrible hack in (shepherd) using SIGALRM to work around
+  ;; unreliable SIGCHLD delivery means that it might take up to 1 second for
+  ;; SIGCHLD to be delivered.  Thus, arrange for the car to be lower than the
+  ;; cdr.
+  (make-parameter '(5 . 7)))
 
 (define (respawn-limit-hit? respawns times seconds)
   "Return true of RESPAWNS, the list of times at which a given service was
@@ -2484,6 +2486,9 @@ terminated."
   "Respawn a service that has stopped running unexpectedly. If we have
 attempted to respawn the service a number of times already and it keeps dying,
 then disable it."
+  (define respawn-limit
+    (default-respawn-limit))
+
   (if (and (respawn-service? serv)
            (not (respawn-limit-hit? (service-respawn-times serv)
                                     (car respawn-limit)
